tests/baselines/reference/parse1.errors.txt
parse1.ts(4,1): error TS1003: Identifier expected.


==== parse1.ts (1 errors) ====
    var bar = 42;
    function foo() {
     bar.
    }
    ~
!!! error TS1003: Identifier expected.
    